cloudsql-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsql-proxy
  namespace: retail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsql-proxy
  template:
    metadata:
      labels:
        app: cloudsql-proxy
    spec:
      containers:
      - name: cloudsql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.0
        args:
          - "--address=0.0.0.0"
          - "--port=5432"
          - "project-bce33668-9485-49b7-820:us-central1:retail-db-d1c250"
---
apiVersion: v1
kind: Service
metadata:
  name: cloudsql-proxy
  namespace: retail
spec:
  selector:
    app: cloudsql-proxy
  ports:
  - port: 5432
    targetPort: 5432
