ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-ingress
  namespace: retail
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "retail-ip"
    networking.gke.io/managed-certificates: "retail-cert"
spec:
  rules:
  - host: 8-233-33-8.sslip.io
    http:
      paths:
      - path: /account/*
        pathType: ImplementationSpecific
        backend: { service: { name: account-service, port: { number: 80 } } }
      - path: /auth/*
        pathType: ImplementationSpecific
        backend: { service: { name: account-service, port: { number: 80 } } }
      - path: /payments/*
        pathType: ImplementationSpecific
        backend: { service: { name: payment-service, port: { number: 80 } } }
      - path: /checkout/*
        pathType: ImplementationSpecific
        backend: { service: { name: checkout-service, port: { number: 80 } } }
      - path: /cart/*
        pathType: ImplementationSpecific
        backend: { service: { name: checkout-service, port: { number: 80 } } }
      - path: /orders/*
        pathType: ImplementationSpecific
        backend: { service: { name: checkout-service, port: { number: 80 } } }
      - path: /loyalty/*
        pathType: ImplementationSpecific
        backend: { service: { name: loyalty-service, port: { number: 80 } } }
